--- a/conf/corruption/conf.yml
+++ b/conf/corruption/conf.yml
@@ -2,8 +2,8 @@ probabilities: # probability of each kind of perturbation to happen (at sample l
   wrong_groundtruth: 0
   no_correct_answer: 0
   multiple_correct_answers: 0
-  bad_options_clarity: 0
-  bad_questions_clarity: 1
+  bad_options_clarity: 1
+  bad_questions_clarity: 0
 llm:
   type: openai # could be http or openai
   configs:
@@ -14,4 +14,4 @@ llm:
       top_p: 1
       frequency_penalty: 0
       presence_penalty: 0
-is_a_test: True # true if you want to test the perturbation on a small portion of the dataset
+is_a_test: False # true if you want to test the perturbation on a small portion of the dataset
