Added zero-shot retreival class

--- a/environment.yml
+++ b/environment.yml
@@ -30,3 +30,6 @@ dependencies:
   - transformers == 4.40.1 # rob_m: required for llama 3 support
   - tokenizers
   - openai
+  - pyserini
+  - faiss-cpu
+
